Added SBT plugin tests